[tool.poetry]
name = "recoo"
version = "0.1.0"
description = ""
authors = ["roy0629 <yuya19920721@outlook.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
